SVN - up to r1575
+ Added pocketpc hardware buttons support

Mar, 7, 2010
+ Fixed joined monster
+ Fixed battle animations
+ Added status message for resurrect spells and death spells
+ Fixed battle necromancy ability
+ Fixed monster magick attack
+ Added bridge animation for battle
+ Fixed battle order speed troop
+ Updated spell action for Battle AI
+ Fixed battle wins/loss music
+ Fixed "mirror image" and "summon elemental" spell for battle
+ Fixed update dwelling population
+ Fixed recruit monster from "water altar " and "eath altar"

Feb, 17, 2010
+ Fixed Coliseum and Storm building ability
+ Added dismiss troop warning and update troop total cost info
+ Fixed game over result for wins_side
+ Fixed move point and spell point for recruit hero
+ Added customizing skill heroes and captain
+ Added customizing buildings, payments costs and profits
+ Added customizing monster stats
+ Added load alternative animation sprite for battle
+ Fixed battle morale
+ Fixed dublicate maps directory
+ Updated grown monsters on maps, fixed genie initial count
+ Fixed pyramid action
+ Fixed distrupting ray spell animation, fixed battle yellow status
+ Fixed start dialogues for loaded game
+ Fixed battle morale with skip turn
+ Fixed battle archers

Feb, 8, 2010
+ Fixed catapult animation
+ Added battle ai mass spell action
+ Fixed moat path restriction
+ Updates speed animations
+ Added system info (free memory, time for pocketpc)
+ Fixed config read
+ Updated new battle logic

Jan, 29, 2010
+ Added new battle engine, QVGA support
+ Fixed spells lasting past the end of a battle
+ Fixed spells lasting indefinitely in battle
+ Fixed monsters casting spells on dead units
+ Added heroes path store
+ Fixed hot seat crash
+ Fixed redistribute army
+ Fixed spell book filter

Nov, 27, 2009
+ fixed multiple pickup maps event
+ fixed sounds in battle being clipped. Stop battle music at end of battle summary.
+ added new mixer code, alternative sound load update code, reduce memory usage
